# lingua_mechanica_kinematics_msgs

./: CMakeLists.txt  package.xml
msg/: RobotState.msg  RobotStates.msg
srv/: GetPositionIK.srv
